--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ Flask==2.3.3
 Flask-SocketIO==5.3.6
 Flask-SQLAlchemy==3.1.1
 Flask-Cors==4.0.0
-eventlet==0.33.3
+gevent==22.10.2
 gunicorn==20.1.0
 python-engineio==4.8.0
 python-socketio==5.9.0
 werkzeug>=2.3.7
+
