--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,10 @@
-Flask==2.3.3
+SQLAlchemy==1.4.52
+Flask==3.0.2
 Flask-SQLAlchemy==3.1.1
 Flask-Cors==4.0.0
-gunicorn==20.1.0
-Werkzeug==2.3.7
+Flask-SocketIO==5.3.6
+python-socketio==5.11.2
+python-engineio==4.9.1
+eventlet==0.33.3
+gevent==23.9.1
+gevent-websocket==0.10.1
