--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,4 @@
-SQLAlchemy==1.4.52
 Flask==3.0.2
-Flask-SQLAlchemy==3.1.1
 Flask-Cors==4.0.0
-Flask-SocketIO==5.3.6
-python-socketio==5.11.2
-python-engineio==4.9.1
-eventlet==0.33.3
-gevent==23.9.1
-gevent-websocket==0.10.1
+Flask-SQLAlchemy==3.1.1
+Werkzeug==3.0.1
